# printer_ai_support_voice_bot

./: .gitignore  README.md  gemini_bridge.py  index.html  langgraph_bridge.py  main.py  printer_bot.py  pyproject.toml  server.py  support_graph.py
RP0/: PIPECAT_RP_GUIDE.md  bot.py  bot_half_duplex.py  sync_to_rp.py
agent_graph/: Building a Printer Support Bot.md  printe_voice_support_grpah.py  printer_support_graph.py
agent_graph/chroma_store/: list_collections.py
