[project]
name = "printer-ai-support-voice-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.28.0",
    "fastapi>=0.128.0",
    "pipecat-ai-small-webrtc-prebuilt>=2.0.4",
    "pipecat-ai[daily,deepgram,google,silero,webrtc]>=0.0.98",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
