[project]
name = "printer-ai-support-voice-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.28.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.3",
    "langchain-google-vertexai>=3.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "pipecat-ai-small-webrtc-prebuilt>=2.0.4",
    "pipecat-ai[daily,deepgram,google,silero,webrtc]>=0.0.98",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.40.0",
]
